<resources>

    <string name="app_name">慧流</string>
    <string name="app_copyright">Copyright © 2012 Kernel Team. \n All Rights Reserved. </string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_base">慧流</string>
    <string name="tencent_weibo">腾讯微博</string>
    <string name="sina_weibo">新浪微博</string>
	<string name="search_input_hint">用户名或昵称</string>
	<string name="search_title">找人</string>
	<string name="activity_loading">加载中&#8230;</string>
        <!-- UserCenterActivity布局专用 -->
    <string name="user_title">个人中心</string>
	<string name="user_location">所在地:</string>
	<string name="user_location_text">无</string>
	<string name="user_words">简介:</string>
	<string name="user_words_text">无</string>
	<string name="user_table_follows">关注</string>
	<string name="user_table_fans">粉丝</string>
	<string name="user_table_shoucang">收藏</string>
	<string name="user_table_weibo">微博</string>
	<string name="user_table_cell_value">0</string>
	<string name="user_follow_add">收听</string>
	<string name="user_follow_cancle">取消收听</string>
		<!-- InfoCenterActivity布局使用 -->
	<string name="info_title">通知中心</string>
	<string name="info_at_me">\@我</string>
	<string name="info_comment_me">评论</string>
	<string name="info_msg">私信</string>
	
		<!--GroupDetailActivity布局使用-->
		<string name="group_detail_user_del">删除</string>
		<string name="group_detail_gname">组名:</string>
		<string name="group_detail_wrods">描述:</string>
		<string name="group_detail_edit">编辑</string>
		<string name="group_detail_find">搜索</string>
		<string name="group_detail_list">请选择要添加的组员</string>
		<string name="group_detail_ok">添加</string>
		<!-- ShowAllListActivity布局专用 -->
	<string name="showlist_me_fans">我的听众</string>
	<string name="showlist_me_weibo">我的广播</string>
	<string name="showlist_me_shoucang">我的收藏</string>
	<string name="showlist_me_follow">我的收听</string>
	<string name="showlist_other_fans">的听众</string>
	<string name="showlist_other_follow">的收听</string>
	<string name="showlist_other_weibo">的广播</string>
	<string name="showlist_back">返回</string>
		
    <string name="weibo_new_new">发表微博</string>
    <string name="weibo_new_comment">评论微博</string>
    <string name="weibo_new_forword">转发微博</string>
    
</resources>