<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >
	<include  layout="@layout/common_head"/>
 <LinearLayout 
     android:layout_height="30dp"
     android:layout_width="fill_parent"
     android:orientation="horizontal"
	 android:paddingLeft="10dp"
	 android:paddingRight="10dp"
     android:background="@drawable/ic_info_tabbar_bg"
     >
     <TextView 
         android:id="@+id/info_btn_at_me"
         android:layout_width="50dp"
         android:layout_height="30dp"
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp"
         android:text="@string/info_at_me"
         android:background="@drawable/ic_info_tab_selected"
         android:textColor="@color/info_tab_selected_color"
         android:typeface="monospace"
         android:textStyle="bold"
         android:gravity="center"
         />
     <TextView 
         android:id="@+id/info_btn_comments"
         android:layout_width="50dp"
         android:layout_height="30dp"
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp"
         android:text="@string/info_comment_me"
         android:textColor="@color/info_tab_textcolor"
         android:typeface="monospace"
         android:textStyle="bold"
         android:gravity="center"
         />
     <TextView 
         android:id="@+id/info_btn_msg"
         android:layout_width="50dp"
         android:layout_height="30dp"
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp"
         android:text="@string/info_msg"
         android:textColor="@color/info_tab_textcolor"
         android:typeface="monospace"
         android:textStyle="bold"
         android:gravity="center"
         />
 </LinearLayout>
 <LinearLayout 
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="#cccccc"
     android:id="@+id/info_show_layout"
     >
 </LinearLayout>
</LinearLayout>