<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >
    
 	<include layout="@layout/common_head"/> 
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="170dp"
	    android:orientation="vertical"
	    android:background="@drawable/ic_user_cover"
	    >
	    <LinearLayout 
	        android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="120dp"
	        >
	        <ImageView 
	            android:layout_width="45dp"
	            android:layout_height="45dp"
	            android:id="@+id/user_switcher_left"
	            android:background="@drawable/ic_user_tab_left"
	            android:layout_marginTop="50dp"
	            android:layout_marginLeft="20dp"
	            />
	        <LinearLayout 
	            android:layout_width="110dp"
	            android:layout_height="110dp"
	            android:orientation="vertical"
	            android:layout_marginLeft="40dp"
	            android:layout_marginTop="10dp"
	            android:background="@drawable/ic_user_touxiang_bg"
	            >
	        <com.kernel.intelcurrent.widget.UrlImageView 
	            android:id="@+id/user_touxiang"
	            android:layout_width="100dp"
	            android:layout_height="100dp"
				android:layout_margin="5dp"
	            android:background="@drawable/ic_user_touxiang_default"
	            />
	        </LinearLayout>
	        <ImageView 
	            android:id="@+id/user_sex"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="-20dp"
	            android:layout_gravity="top"
	            android:background="@drawable/ic_user_sex_male"
	            />
	        <ImageView 
	            android:layout_width="45dp"
	            android:layout_height="45dp"
	            android:id="@+id/user_switcher_right"
	            android:layout_marginLeft="30dp"
	            android:layout_marginTop="50dp"
	            android:background="@drawable/ic_user_tab_right"
	            />
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="40dp"
	        android:orientation="horizontal"
	        >
	        <ImageView
	            android:id="@+id/user_platform_logo" 
	            android:layout_width="40dp"
	            android:layout_height="40dp"
	            android:padding="5dp"
	            android:layout_marginLeft="40dp"
	           	android:background="@drawable/ic_user_tencent_logo"
	            />
		    <TextView 
		        android:id="@+id/user_name"
		        android:layout_width="160dp"
		        android:layout_height="40dp"
		        android:textSize="20dp"
		        android:typeface="serif"
		        
		        android:layout_marginRight="80dp"
		        android:textColor="#ffffff"
		        android:textStyle="bold"
		        android:gravity="center"
		        />
	    </LinearLayout>
	</LinearLayout>
	<LinearLayout 
	    android:orientation="horizontal"
	    android:layout_height="50dp"
	    android:layout_width="fill_parent"
	    android:layout_marginLeft="5dp"
	    android:layout_marginTop="2dp"
	    >
	    <TextView 
	        android:layout_width="60dp"
	        android:layout_height="40dp"
	        android:textSize="15sp"
	        android:textColor="@color/user_textcolor"
	        android:textStyle="bold"
	        android:gravity="center"
	        android:background="@drawable/ic_user_btn_bg"
	        android:text="@string/user_location"	        
	        />

	    <TextView
	        android:id="@+id/user_location"
	        android:text="@string/user_location_text"
	        android:paddingLeft="5dp"
	        android:layout_width="245dp"
	        android:layout_height="40dp"
	        android:gravity="center_vertical"
	        android:textSize="16sp"
	        android:textColor="@color/user_table_cell_color"
	        android:layout_marginLeft="2dp"
	        android:background="@drawable/ic_user_input_bg" />

	</LinearLayout>
		<LinearLayout 
	    android:orientation="horizontal"
	    android:layout_height="50dp"
	    android:layout_width="fill_parent"
	    android:layout_marginLeft="5dp"
	    android:layout_marginTop="2dp"
	    >
	    <TextView 
	        android:layout_width="60dp"
	        android:layout_height="40dp"
	        android:textSize="15sp"
	        android:textColor="@color/user_textcolor"
	        android:textStyle="bold"
	        android:gravity="center"
	        android:background="@drawable/ic_user_btn_bg"
	        android:text="@string/user_words"	        
	        />
	    <TextView
	        android:id="@+id/user_words"
	        android:paddingLeft="5dp"
	        android:layout_width="245dp"
	        android:layout_height="40dp"
	        android:layout_marginLeft="2dp"
	        android:textSize="16sp"
	        android:gravity="center_vertical"
	        android:text="@string/user_words_text"
	        android:textColor="@color/user_table_cell_color"
	        android:background="@drawable/ic_user_input_bg" />
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="120dp"
	    android:background="@drawable/ic_user_table_bg"
	    android:orientation="vertical"
	    >
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	     	android:layout_marginLeft="5dp"
	   		android:layout_marginRight="5dp"
	        android:orientation="horizontal"
	        >
		<TextView 
		    android:id="@+id/user_tab_follows"
		    android:layout_width="60dp"
		    android:layout_height="60dp"
		   	android:textSize="20sp"
		    android:textStyle="bold"
		    android:textColor="@color/user_table_cell_color"
		    android:gravity="center"
		    android:text="@string/user_table_follows"
		    android:layout_marginLeft="@dimen/user_table_margin_left"
		    android:background="@drawable/ic_user_table_cell"
		    />
		<TextView 
		    android:id="@+id/user_tab_fans"
		    android:layout_width="60dp"
		    android:layout_height="60dp"
		    android:gravity="center"
		    android:textSize="20sp"
		    android:textStyle="bold"
		    android:textColor="@color/user_table_cell_color"
		    android:text="@string/user_table_fans"
		    android:layout_marginLeft="@dimen/user_table_margin_left"
		    android:background="@drawable/ic_user_table_cell"
		    />
		<TextView 
		    android:id="@+id/user_tab_shoucang"
		    android:layout_width="60dp"
		    android:layout_height="60dp"
		    android:gravity="center"
		   	android:textSize="20sp"
		    android:textStyle="bold"
		    android:textColor="@color/user_table_cell_color"
		    android:text="@string/user_table_shoucang"
		    android:layout_marginLeft="@dimen/user_table_margin_left"
		    android:background="@drawable/ic_user_table_cell"
		    />
		<TextView 
		    android:id="@+id/user_tab_weibo"
		    android:layout_width="60dp"
		    android:layout_height="60dp"
		    android:gravity="center"
		    android:textSize="20sp"
		    android:textStyle="bold"
		    android:textColor="@color/user_table_cell_color"
		    android:text="@string/user_table_weibo"
		    android:layout_marginLeft="@dimen/user_table_margin_left"
		    android:background="@drawable/ic_user_table_cell"
		    />
		</LinearLayout>
		<LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	     	android:layout_marginLeft="5dp"
	   		android:layout_marginRight="5dp"
	        android:orientation="horizontal"
	        >
		<TextView 
		    android:id="@+id/user_tab_follows_counts"
		    android:layout_width="60dp"
		    android:layout_height="30dp"
		   	android:textSize="20sp"
		    android:textStyle="bold"
		    android:textColor="@color/user_table_cell_color"
		    android:gravity="center"
		    android:text="@string/user_table_cell_value"
		    android:layout_marginLeft="@dimen/user_table_margin_left"
		    android:background="@drawable/ic_user_table_cell"
		    />
		<TextView 
		    android:id="@+id/user_tab_fans_counts"
		    android:layout_width="60dp"
		    android:layout_height="30dp"
		    android:gravity="center"
		    android:textSize="20sp"
		    android:textStyle="bold"
		    android:textColor="@color/user_table_cell_color"
		    android:text="@string/user_table_cell_value"
		    android:layout_marginLeft="@dimen/user_table_margin_left"
		    android:background="@drawable/ic_user_table_cell"
		    />
		<TextView 
		    android:id="@+id/user_tab_shoucang_counts"
		    android:layout_width="60dp"
		    android:layout_height="30dp"
		    android:gravity="center"
		   	android:textSize="20sp"
		    android:textStyle="bold"
		    android:textColor="@color/user_table_cell_color"
		    android:text="@string/user_table_cell_value"
		    android:layout_marginLeft="@dimen/user_table_margin_left"
		    android:background="@drawable/ic_user_table_cell"
		    />
		<TextView 
		    android:id="@+id/user_tab_weibo_counts"
		    android:layout_width="60dp"
		    android:layout_height="30dp"
		    android:gravity="center"
		    android:textSize="20sp"
		    android:textStyle="bold"
		    android:textColor="@color/user_table_cell_color"
		    android:text="@string/user_table_cell_value"
		    android:layout_marginLeft="@dimen/user_table_margin_left"
		    android:background="@drawable/ic_user_table_cell"
		    />
		</LinearLayout>
	</LinearLayout>

</LinearLayout>