<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >
    <include layout="@layout/common_head"/>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="200dp"
	    android:orientation="vertical"
	    android:layout_margin="5dp"
	    android:background="@drawable/ic_user_panel_bg"
	    >
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="140dp"
	        android:orientation="horizontal"
	        >
	        <ImageView 
	            android:id="@+id/other_user_head"
	            android:layout_width="100dp"
	            android:layout_height="100dp"
	            android:background="@drawable/ic_user_touxiang_default"
	            android:layout_margin="15dp"
	            />
	        <LinearLayout 
	            android:layout_width="180dp"
	            android:layout_height="140dp"
	        	android:orientation="vertical"
	            >
	            <Button
	                android:id="@+id/other_user_name"
	                android:layout_width="160dp"
	                android:layout_height="50dp"
	                android:layout_marginTop="20dp"
	                android:text="@string/app_name"
	                android:gravity="center_vertical"
	                android:textStyle="bold"
	                android:background="#ffffff"
	                android:clickable="false"
	                android:textSize="20sp"
	                />
	             <TextView 
	                 android:id="@+id/other_user_location"
	                android:layout_width="160dp"
	                android:layout_height="50dp"
	                android:gravity="center_vertical"
	                android:layout_marginBottom="20dp"
	                />
	        </LinearLayout>
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="60dp"
	        android:orientation="horizontal"
	        android:layout_marginLeft="5dp"
	        android:layout_marginRight="5dp"
	        >
	        <Button
	            android:id="@+id/other_user_platform"
	            android:layout_width="100dp"
	            android:layout_height="40dp"
				android:layout_marginLeft="15dp"
				android:background="#ffffff"
				android:clickable="false"    	
	           	/>
	        <TextView 
	            android:id="@+id/other_user_follow_btn"
	            android:layout_width="80dp"
	            android:layout_height="40dp"
	            android:layout_margin="5dp"
	            android:background="@drawable/ic_user_list_cell_btn_bg"
	            android:textColor="@color/ic_user_list_cell_btn_color"
	            android:gravity="center"
	            />
	        <TextView
	            android:id="@+id/other_user_at_btn"
	            android:layout_width="80dp"
	            android:layout_height="40dp"
	            android:layout_margin="5dp"
	           	android:background="@drawable/ic_user_list_cell_btn_bg"
	           	android:textColor="@color/ic_user_list_cell_btn_color"
	            android:gravity="center"
	            />
	    </LinearLayout>
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="50dp"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
	    android:layout_marginTop="10dp"
	    android:layout_marginBottom="5dp"
	    android:orientation="horizontal"
	    android:background="@drawable/ic_user_panel_bg"
	    >
	    <TextView 
	        android:layout_width="60dp"
	        android:layout_height="50dp"
	        android:gravity="center"
	        android:layout_gravity="center"
	        android:text="@string/user_words"
	        android:textColor="@color/user_textcolor_blue"
	        android:textSize="16sp"
	        android:typeface="serif"
	        android:textStyle="bold"
	        />
	    <TextView 
	        android:id="@+id/other_user_words"
	        android:layout_width="200dp"
	        android:layout_height="50dp"
	        android:gravity="center_vertical"
	        android:layout_gravity="center"
	        android:textColor="#000000"
	        android:textSize="16sp"
	        android:typeface="serif"
	        android:text="@string/user_words_text"
	        />
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/ic_user_panel_bg"
	    android:gravity="center_horizontal"
	    android:layout_gravity="center"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
	    android:layout_marginTop="10dp"
	    >
	    <include layout="@layout/activity_user_info_cell"
	        	android:id="@+id/other_user_fans_layout"/>
	    <include layout="@layout/activity_user_info_cell"
	        	android:id="@+id/other_user_follow_layout"/>
	    <include layout="@layout/activity_user_info_cell"
	        	android:id="@+id/other_user_weibo_layout"/>	      
	</LinearLayout>
</LinearLayout>